objects/TObject1__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <type>Phone</type>
    </fields>
    <label>TObject1</label>
    <nameField>
        <label>TObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>